provider-aws/examples-generated/appmesh/virtualservice.yaml
apiVersion: appmesh.aws.upbound.io/v1alpha1
kind: VirtualService
metadata:
  name: example
spec:
  forProvider:
    meshName: ${aws_appmesh_mesh.simple.id}
    name: servicea.simpleapp.local
    spec:
    - provider:
      - virtualNode:
        - virtualNodeName: serviceBv1
  providerConfigRef:
    name: example
